--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
+        <button type="button" class="btn btn-success">Success</button>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
       </div>
 
